fix: Overflows

--- a/src/frontend/src/app/show/components/ScaleText/scaleText.module.css
+++ b/src/frontend/src/app/show/components/ScaleText/scaleText.module.css
@@ -5,3 +5,9 @@ span.measure {
     width: auto;
     white-space: nowrap;
 }
+
+div.scaleText {
+    position:relative;
+    width: 100%;
+    overflow-x:hidden;
+}
