--- a/src/frontend/src/app/show/components/ShowScreen/showScreen.module.css
+++ b/src/frontend/src/app/show/components/ShowScreen/showScreen.module.css
@@ -5,4 +5,5 @@ div.showScreen, div.show {
     width: 100%;
     height: 100%;
     background-color: white;
+    overflow:hidden;
 }
